--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,11 @@ spring.data.mongodb.database=challenge
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.cache.redis.time-to-live=600000
+spring.cache.cache-names=energyAsset
+
 
 
 
